; ModuleID = '/home/carl/AnghaBench/RetroArch/wiiu/system/extr_missing_libc_functions.c_getifaddrs.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wiiu/system/extr_missing_libc_functions.c_getifaddrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifaddrs = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getifaddrs(%struct.ifaddrs** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ifaddrs**, align 8
  store %struct.ifaddrs** %0, %struct.ifaddrs*** %3, align 8
  %4 = load %struct.ifaddrs**, %struct.ifaddrs*** %3, align 8
  %5 = icmp ne %struct.ifaddrs** %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %15

7:                                                ; preds = %1
  %8 = call %struct.ifaddrs* (...) @getWiiUInterfaceAddressData()
  %9 = load %struct.ifaddrs**, %struct.ifaddrs*** %3, align 8
  store %struct.ifaddrs* %8, %struct.ifaddrs** %9, align 8
  %10 = load %struct.ifaddrs**, %struct.ifaddrs*** %3, align 8
  %11 = load %struct.ifaddrs*, %struct.ifaddrs** %10, align 8
  %12 = icmp eq %struct.ifaddrs* %11, null
  %13 = zext i1 %12 to i64
  %14 = select i1 %12, i32 -1, i32 0
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %7, %6
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local %struct.ifaddrs* @getWiiUInterfaceAddressData(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
